Fix: add jvm reflection instructions